[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "grequests>=0.6.0",
    "bs4>=0.0.1",
    "m3u8>=2.0.0",
    "fire>=0.4.0",
    "requests>=2.28.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
